--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "atom-dark-ui",
+  "name": "atom-observify-dark-ui",
   "theme": "ui",
   "version": "0.51.1",
-  "description": "A dark UI theme for Atom",
+  "description": "A dark UI theme for Atom, based on Observify",
   "license": "MIT",
   "repository": "https://github.com/atom/atom-dark-ui",
   "engines": {
